nextjs/components/Thread/index.module.scss
@import 'styles/colors.scss';

.container {
  background: $color-white;
}

.thread {
  background: $color-white;
  max-width: 100%;
  min-width: 480px;
}

.footer {
  clear: both;
  min-height: 20px;
  display: flex;
  padding-bottom: 2rem;
  justify-content: space-between;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
}

.chat {
  background: $color-white;
  border-top: 1px solid $color-border;
  bottom: 0;
  padding: 1rem;
  position: sticky;
  width: 100%;
}

@media (max-width: 767px) {
  .thread {
    min-width: 320px;
  }

  .footer {
    min-width: 100%;
    width: 100%;
  }
}

@media (min-width: 768px) {
  .footer {
    min-width: 360px;
  }
}

.count {
  font-size: 14px;
}

.subtext {
  color: $color-gray-500;
}

.title {
  font-weight: bold;
  padding-bottom: 1rem;
}

